fixing bugs chat
