# backend/template/src/openapi/openapi.json
@@ -1216,6 +1216,40 @@
                 }
             }
         },
+        "/task/get-user-tasks/{user_email}": {
+            "get": {
+                "tags": [
+                    "task-controller"
+                ],
+                "operationId": "getTasksByUserEmail",
+                "parameters": [
+                    {
+                        "name": "user_email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Task"
+                                    },
+                                    "uniqueItems": true
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/task/get-task-by-project/{project_id}/{size}/{page_no}": {
             "get": {
                 "tags": [
@@ -1467,6 +1501,40 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/ProjectUserResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/project-user/get-projects/{user_email}": {
+            "get": {
+                "tags": [
+                    "project-user-controller"
+                ],
+                "operationId": "getUserProjectsByEmail",
+                "parameters": [
+                    {
+                        "name": "user_email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/ProjectUserProjection"
+                                    },
+                                    "uniqueItems": true
                                 }
                             }
                         }
@@ -2158,10 +2226,10 @@
                         "type": "string",
                         "format": "date-time"
                     },
-                    "is_locked": {
+                    "is_deleted": {
                         "type": "boolean"
                     },
-                    "is_deleted": {
+                    "is_locked": {
                         "type": "boolean"
                     }
                 }
@@ -2481,9 +2549,6 @@
                     "message": {
                         "type": "string"
                     },
-                    "sender": {
-                        "$ref": "#/components/schemas/UserProjection"
-                    },
                     "createdAt": {
                         "type": "string",
                         "format": "date-time"
@@ -2493,6 +2558,9 @@
                         "items": {
                             "$ref": "#/components/schemas/ProjectDocument"
                         }
+                    },
+                    "sender": {
+                        "$ref": "#/components/schemas/UserProjection"
                     }
                 }
             },
@@ -2557,25 +2625,14 @@
                     "description": {
                         "type": "string"
                     },
-                    "status": {
-                        "type": "string",
-                        "enum": [
-                            "NOT_STARTED",
-                            "IN_PROGRESS",
-                            "ON_HOLD",
-                            "CANCELED",
-                            "UNDER_REVIEW",
-                            "FINISHED"
-                        ]
-                    },
                     "image": {
                         "type": "string"
                     },
-                    "beginDate": {
+                    "deadline": {
                         "type": "string",
                         "format": "date-time"
                     },
-                    "deadline": {
+                    "beginDate": {
                         "type": "string",
                         "format": "date-time"
                     },
@@ -2593,6 +2650,17 @@
                     "achievement": {
                         "type": "number",
                         "format": "float"
+                    },
+                    "status": {
+                        "type": "string",
+                        "enum": [
+                            "NOT_STARTED",
+                            "IN_PROGRESS",
+                            "ON_HOLD",
+                            "CANCELED",
+                            "UNDER_REVIEW",
+                            "FINISHED"
+                        ]
                     }
                 }
             },
@@ -2672,6 +2740,21 @@
                     "description": {
                         "type": "string"
                     },
+                    "deadline": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "beginDate": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "documents": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/ProjectDocument"
+                        },
+                        "uniqueItems": true
+                    },
                     "title": {
                         "type": "string"
                     },
@@ -2685,21 +2768,6 @@
                             "DONE",
                             "ARCHIVED"
                         ]
-                    },
-                    "beginDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "deadline": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "documents": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/ProjectDocument"
-                        },
-                        "uniqueItems": true
                     },
                     "taskId": {
                         "type": "integer",
@@ -2747,11 +2815,11 @@
                             "TEAM_MEMBER"
                         ]
                     },
-                    "project": {
-                        "$ref": "#/components/schemas/ProjectProjection"
-                    },
                     "user": {
                         "$ref": "#/components/schemas/UserProjection"
+                    },
+                    "project": {
+                        "$ref": "#/components/schemas/ProjectProjection"
                     }
                 }
             },
@@ -2826,14 +2894,11 @@
                     "description": {
                         "type": "string"
                     },
-                    "title": {
-                        "type": "string"
-                    },
-                    "beginDate": {
+                    "deadline": {
                         "type": "string",
                         "format": "date-time"
                     },
-                    "deadline": {
+                    "beginDate": {
                         "type": "string",
                         "format": "date-time"
                     },
@@ -2854,6 +2919,9 @@
                     "moduleId": {
                         "type": "integer",
                         "format": "int64"
+                    },
+                    "title": {
+                        "type": "string"
                     }
                 }
             }
